openmfda_flow_py_support/src/openmfda_flow_main/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> in_file
Rule 1     in_file -> in_file macro
Rule 2     in_file -> in_file lef_noimp
Rule 3     in_file -> macro
Rule 4     in_file -> lef_noimp
Rule 5     lef_noimp -> end_lib
Rule 6     lef_noimp -> busbit
Rule 7     lef_noimp -> divider
Rule 8     lef_noimp -> version
Rule 9     end_lib -> END LIBRARY
Rule 10    busbit -> BUSBITCHARS ESCAPED_STRING END_STMT
Rule 11    divider -> DIVIDERCHAR ESCAPED_STRING END_STMT
Rule 12    version -> VERSION NUMBER END_STMT
Rule 13    macro -> MACRO CNAME macro_stmt_list END CNAME
Rule 14    macro_stmt_list -> macro_stmt_list macro_stmt
Rule 15    macro_stmt_list -> macro_stmt_list comment
Rule 16    macro_stmt_list -> macro_stmt
Rule 17    macro_stmt_list -> comment
Rule 18    macro_stmt -> class
Rule 19    macro_stmt -> origin
Rule 20    macro_stmt -> foreign
Rule 21    macro_stmt -> size
Rule 22    macro_stmt -> symmetry
Rule 23    macro_stmt -> site
Rule 24    macro_stmt -> pin
Rule 25    macro_stmt -> obs
Rule 26    macro_stmt -> property
Rule 27    class -> CLASS CNAME END_STMT
Rule 28    origin -> ORIGIN NUMBER NUMBER END_STMT
Rule 29    foreign -> FOREIGN CNAME NUMBER NUMBER END_STMT
Rule 30    size -> SIZE NUMBER BY NUMBER END_STMT
Rule 31    symmetry -> SYMMETRY CNAME CNAME END_STMT
Rule 32    symmetry -> SYMMETRY CNAME END_STMT
Rule 33    site -> SITE CNAME END_STMT
Rule 34    pin -> PIN CNAME pin_stmt_list END CNAME
Rule 35    pin_stmt_list -> pin_stmt_list pin_stmt
Rule 36    pin_stmt_list -> pin_stmt
Rule 37    pin_stmt -> direction
Rule 38    pin_stmt -> use
Rule 39    pin_stmt -> port
Rule 40    direction -> DIRECTION OUTPUT END_STMT
Rule 41    direction -> DIRECTION INPUT END_STMT
Rule 42    direction -> DIRECTION INOUT END_STMT
Rule 43    use -> USE SIGNAL END_STMT
Rule 44    port -> PORT geom END
Rule 45    obs -> OBS geom_list END
Rule 46    geom_list -> geom_list geom
Rule 47    geom_list -> geom
Rule 48    geom -> LAYER CNAME END_STMT rect
Rule 49    rect -> RECT NUMBER NUMBER NUMBER NUMBER END_STMT
Rule 50    property -> PROPERTY CNAME ESCAPED_STRING END_STMT
Rule 51    comment -> COMMENT

Terminals, with rules where they appear

BUSBITCHARS          : 10
BY                   : 30
CLASS                : 27
CNAME                : 13 13 27 29 31 31 32 33 34 34 48 50
COMMENT              : 51
DIRECTION            : 40 41 42
DIVIDERCHAR          : 11
END                  : 9 13 34 44 45
END_STMT             : 10 11 12 27 28 29 30 31 32 33 40 41 42 43 48 49 50
ESCAPED_STRING       : 10 11 50
FOREIGN              : 29
INOUT                : 42
INPUT                : 41
LAYER                : 48
LIBRARY              : 9
MACRO                : 13
NUMBER               : 12 28 28 29 29 30 30 49 49 49 49
OBS                  : 45
ORIGIN               : 28
OUTPUT               : 40
PIN                  : 34
PORT                 : 44
PROPERTY             : 50
RECT                 : 49
SIGNAL               : 43
SITE                 : 33
SIZE                 : 30
SYMMETRY             : 31 32
USE                  : 43
VERSION              : 12
error                : 

Nonterminals, with rules where they appear

busbit               : 6
class                : 18
comment              : 15 17
direction            : 37
divider              : 7
end_lib              : 5
foreign              : 20
geom                 : 44 46 47
geom_list            : 45 46
in_file              : 1 2 0
lef_noimp            : 2 4
macro                : 1 3
macro_stmt           : 14 16
macro_stmt_list      : 13 14 15
obs                  : 25
origin               : 19
pin                  : 24
pin_stmt             : 35 36
pin_stmt_list        : 34 35
port                 : 39
property             : 26
rect                 : 48
site                 : 23
size                 : 21
symmetry             : 22
use                  : 38
version              : 8

Parsing method: LALR

state 0

    (0) S' -> . in_file
    (1) in_file -> . in_file macro
    (2) in_file -> . in_file lef_noimp
    (3) in_file -> . macro
    (4) in_file -> . lef_noimp
    (13) macro -> . MACRO CNAME macro_stmt_list END CNAME
    (5) lef_noimp -> . end_lib
    (6) lef_noimp -> . busbit
    (7) lef_noimp -> . divider
    (8) lef_noimp -> . version
    (9) end_lib -> . END LIBRARY
    (10) busbit -> . BUSBITCHARS ESCAPED_STRING END_STMT
    (11) divider -> . DIVIDERCHAR ESCAPED_STRING END_STMT
    (12) version -> . VERSION NUMBER END_STMT

    MACRO           shift and go to state 4
    END             shift and go to state 5
    BUSBITCHARS     shift and go to state 10
    DIVIDERCHAR     shift and go to state 11
    VERSION         shift and go to state 12

    in_file                        shift and go to state 1
    macro                          shift and go to state 2
    lef_noimp                      shift and go to state 3
    end_lib                        shift and go to state 6
    busbit                         shift and go to state 7
    divider                        shift and go to state 8
    version                        shift and go to state 9

state 1

    (0) S' -> in_file .
    (1) in_file -> in_file . macro
    (2) in_file -> in_file . lef_noimp
    (13) macro -> . MACRO CNAME macro_stmt_list END CNAME
    (5) lef_noimp -> . end_lib
    (6) lef_noimp -> . busbit
    (7) lef_noimp -> . divider
    (8) lef_noimp -> . version
    (9) end_lib -> . END LIBRARY
    (10) busbit -> . BUSBITCHARS ESCAPED_STRING END_STMT
    (11) divider -> . DIVIDERCHAR ESCAPED_STRING END_STMT
    (12) version -> . VERSION NUMBER END_STMT

    MACRO           shift and go to state 4
    END             shift and go to state 5
    BUSBITCHARS     shift and go to state 10
    DIVIDERCHAR     shift and go to state 11
    VERSION         shift and go to state 12

    macro                          shift and go to state 13
    lef_noimp                      shift and go to state 14
    end_lib                        shift and go to state 6
    busbit                         shift and go to state 7
    divider                        shift and go to state 8
    version                        shift and go to state 9

state 2

    (3) in_file -> macro .

    MACRO           reduce using rule 3 (in_file -> macro .)
    END             reduce using rule 3 (in_file -> macro .)
    BUSBITCHARS     reduce using rule 3 (in_file -> macro .)
    DIVIDERCHAR     reduce using rule 3 (in_file -> macro .)
    VERSION         reduce using rule 3 (in_file -> macro .)
    $end            reduce using rule 3 (in_file -> macro .)


state 3

    (4) in_file -> lef_noimp .

    MACRO           reduce using rule 4 (in_file -> lef_noimp .)
    END             reduce using rule 4 (in_file -> lef_noimp .)
    BUSBITCHARS     reduce using rule 4 (in_file -> lef_noimp .)
    DIVIDERCHAR     reduce using rule 4 (in_file -> lef_noimp .)
    VERSION         reduce using rule 4 (in_file -> lef_noimp .)
    $end            reduce using rule 4 (in_file -> lef_noimp .)


state 4

    (13) macro -> MACRO . CNAME macro_stmt_list END CNAME

    CNAME           shift and go to state 15


state 5

    (9) end_lib -> END . LIBRARY

    LIBRARY         shift and go to state 16


state 6

    (5) lef_noimp -> end_lib .

    MACRO           reduce using rule 5 (lef_noimp -> end_lib .)
    END             reduce using rule 5 (lef_noimp -> end_lib .)
    BUSBITCHARS     reduce using rule 5 (lef_noimp -> end_lib .)
    DIVIDERCHAR     reduce using rule 5 (lef_noimp -> end_lib .)
    VERSION         reduce using rule 5 (lef_noimp -> end_lib .)
    $end            reduce using rule 5 (lef_noimp -> end_lib .)


state 7

    (6) lef_noimp -> busbit .

    MACRO           reduce using rule 6 (lef_noimp -> busbit .)
    END             reduce using rule 6 (lef_noimp -> busbit .)
    BUSBITCHARS     reduce using rule 6 (lef_noimp -> busbit .)
    DIVIDERCHAR     reduce using rule 6 (lef_noimp -> busbit .)
    VERSION         reduce using rule 6 (lef_noimp -> busbit .)
    $end            reduce using rule 6 (lef_noimp -> busbit .)


state 8

    (7) lef_noimp -> divider .

    MACRO           reduce using rule 7 (lef_noimp -> divider .)
    END             reduce using rule 7 (lef_noimp -> divider .)
    BUSBITCHARS     reduce using rule 7 (lef_noimp -> divider .)
    DIVIDERCHAR     reduce using rule 7 (lef_noimp -> divider .)
    VERSION         reduce using rule 7 (lef_noimp -> divider .)
    $end            reduce using rule 7 (lef_noimp -> divider .)


state 9

    (8) lef_noimp -> version .

    MACRO           reduce using rule 8 (lef_noimp -> version .)
    END             reduce using rule 8 (lef_noimp -> version .)
    BUSBITCHARS     reduce using rule 8 (lef_noimp -> version .)
    DIVIDERCHAR     reduce using rule 8 (lef_noimp -> version .)
    VERSION         reduce using rule 8 (lef_noimp -> version .)
    $end            reduce using rule 8 (lef_noimp -> version .)


state 10

    (10) busbit -> BUSBITCHARS . ESCAPED_STRING END_STMT

    ESCAPED_STRING  shift and go to state 17


state 11

    (11) divider -> DIVIDERCHAR . ESCAPED_STRING END_STMT

    ESCAPED_STRING  shift and go to state 18


state 12

    (12) version -> VERSION . NUMBER END_STMT

    NUMBER          shift and go to state 19


state 13

    (1) in_file -> in_file macro .

    MACRO           reduce using rule 1 (in_file -> in_file macro .)
    END             reduce using rule 1 (in_file -> in_file macro .)
    BUSBITCHARS     reduce using rule 1 (in_file -> in_file macro .)
    DIVIDERCHAR     reduce using rule 1 (in_file -> in_file macro .)
    VERSION         reduce using rule 1 (in_file -> in_file macro .)
    $end            reduce using rule 1 (in_file -> in_file macro .)


state 14

    (2) in_file -> in_file lef_noimp .

    MACRO           reduce using rule 2 (in_file -> in_file lef_noimp .)
    END             reduce using rule 2 (in_file -> in_file lef_noimp .)
    BUSBITCHARS     reduce using rule 2 (in_file -> in_file lef_noimp .)
    DIVIDERCHAR     reduce using rule 2 (in_file -> in_file lef_noimp .)
    VERSION         reduce using rule 2 (in_file -> in_file lef_noimp .)
    $end            reduce using rule 2 (in_file -> in_file lef_noimp .)


state 15

    (13) macro -> MACRO CNAME . macro_stmt_list END CNAME
    (14) macro_stmt_list -> . macro_stmt_list macro_stmt
    (15) macro_stmt_list -> . macro_stmt_list comment
    (16) macro_stmt_list -> . macro_stmt
    (17) macro_stmt_list -> . comment
    (18) macro_stmt -> . class
    (19) macro_stmt -> . origin
    (20) macro_stmt -> . foreign
    (21) macro_stmt -> . size
    (22) macro_stmt -> . symmetry
    (23) macro_stmt -> . site
    (24) macro_stmt -> . pin
    (25) macro_stmt -> . obs
    (26) macro_stmt -> . property
    (51) comment -> . COMMENT
    (27) class -> . CLASS CNAME END_STMT
    (28) origin -> . ORIGIN NUMBER NUMBER END_STMT
    (29) foreign -> . FOREIGN CNAME NUMBER NUMBER END_STMT
    (30) size -> . SIZE NUMBER BY NUMBER END_STMT
    (31) symmetry -> . SYMMETRY CNAME CNAME END_STMT
    (32) symmetry -> . SYMMETRY CNAME END_STMT
    (33) site -> . SITE CNAME END_STMT
    (34) pin -> . PIN CNAME pin_stmt_list END CNAME
    (45) obs -> . OBS geom_list END
    (50) property -> . PROPERTY CNAME ESCAPED_STRING END_STMT

    COMMENT         shift and go to state 32
    CLASS           shift and go to state 33
    ORIGIN          shift and go to state 34
    FOREIGN         shift and go to state 35
    SIZE            shift and go to state 36
    SYMMETRY        shift and go to state 37
    SITE            shift and go to state 38
    PIN             shift and go to state 39
    OBS             shift and go to state 40
    PROPERTY        shift and go to state 41

    macro_stmt_list                shift and go to state 20
    macro_stmt                     shift and go to state 21
    comment                        shift and go to state 22
    class                          shift and go to state 23
    origin                         shift and go to state 24
    foreign                        shift and go to state 25
    size                           shift and go to state 26
    symmetry                       shift and go to state 27
    site                           shift and go to state 28
    pin                            shift and go to state 29
    obs                            shift and go to state 30
    property                       shift and go to state 31

state 16

    (9) end_lib -> END LIBRARY .

    MACRO           reduce using rule 9 (end_lib -> END LIBRARY .)
    END             reduce using rule 9 (end_lib -> END LIBRARY .)
    BUSBITCHARS     reduce using rule 9 (end_lib -> END LIBRARY .)
    DIVIDERCHAR     reduce using rule 9 (end_lib -> END LIBRARY .)
    VERSION         reduce using rule 9 (end_lib -> END LIBRARY .)
    $end            reduce using rule 9 (end_lib -> END LIBRARY .)


state 17

    (10) busbit -> BUSBITCHARS ESCAPED_STRING . END_STMT

    END_STMT        shift and go to state 42


state 18

    (11) divider -> DIVIDERCHAR ESCAPED_STRING . END_STMT

    END_STMT        shift and go to state 43


state 19

    (12) version -> VERSION NUMBER . END_STMT

    END_STMT        shift and go to state 44


state 20

    (13) macro -> MACRO CNAME macro_stmt_list . END CNAME
    (14) macro_stmt_list -> macro_stmt_list . macro_stmt
    (15) macro_stmt_list -> macro_stmt_list . comment
    (18) macro_stmt -> . class
    (19) macro_stmt -> . origin
    (20) macro_stmt -> . foreign
    (21) macro_stmt -> . size
    (22) macro_stmt -> . symmetry
    (23) macro_stmt -> . site
    (24) macro_stmt -> . pin
    (25) macro_stmt -> . obs
    (26) macro_stmt -> . property
    (51) comment -> . COMMENT
    (27) class -> . CLASS CNAME END_STMT
    (28) origin -> . ORIGIN NUMBER NUMBER END_STMT
    (29) foreign -> . FOREIGN CNAME NUMBER NUMBER END_STMT
    (30) size -> . SIZE NUMBER BY NUMBER END_STMT
    (31) symmetry -> . SYMMETRY CNAME CNAME END_STMT
    (32) symmetry -> . SYMMETRY CNAME END_STMT
    (33) site -> . SITE CNAME END_STMT
    (34) pin -> . PIN CNAME pin_stmt_list END CNAME
    (45) obs -> . OBS geom_list END
    (50) property -> . PROPERTY CNAME ESCAPED_STRING END_STMT

    END             shift and go to state 45
    COMMENT         shift and go to state 32
    CLASS           shift and go to state 33
    ORIGIN          shift and go to state 34
    FOREIGN         shift and go to state 35
    SIZE            shift and go to state 36
    SYMMETRY        shift and go to state 37
    SITE            shift and go to state 38
    PIN             shift and go to state 39
    OBS             shift and go to state 40
    PROPERTY        shift and go to state 41

    macro_stmt                     shift and go to state 46
    comment                        shift and go to state 47
    class                          shift and go to state 23
    origin                         shift and go to state 24
    foreign                        shift and go to state 25
    size                           shift and go to state 26
    symmetry                       shift and go to state 27
    site                           shift and go to state 28
    pin                            shift and go to state 29
    obs                            shift and go to state 30
    property                       shift and go to state 31

state 21

    (16) macro_stmt_list -> macro_stmt .

    END             reduce using rule 16 (macro_stmt_list -> macro_stmt .)
    COMMENT         reduce using rule 16 (macro_stmt_list -> macro_stmt .)
    CLASS           reduce using rule 16 (macro_stmt_list -> macro_stmt .)
    ORIGIN          reduce using rule 16 (macro_stmt_list -> macro_stmt .)
    FOREIGN         reduce using rule 16 (macro_stmt_list -> macro_stmt .)
    SIZE            reduce using rule 16 (macro_stmt_list -> macro_stmt .)
    SYMMETRY        reduce using rule 16 (macro_stmt_list -> macro_stmt .)
    SITE            reduce using rule 16 (macro_stmt_list -> macro_stmt .)
    PIN             reduce using rule 16 (macro_stmt_list -> macro_stmt .)
    OBS             reduce using rule 16 (macro_stmt_list -> macro_stmt .)
    PROPERTY        reduce using rule 16 (macro_stmt_list -> macro_stmt .)


state 22

    (17) macro_stmt_list -> comment .

    END             reduce using rule 17 (macro_stmt_list -> comment .)
    COMMENT         reduce using rule 17 (macro_stmt_list -> comment .)
    CLASS           reduce using rule 17 (macro_stmt_list -> comment .)
    ORIGIN          reduce using rule 17 (macro_stmt_list -> comment .)
    FOREIGN         reduce using rule 17 (macro_stmt_list -> comment .)
    SIZE            reduce using rule 17 (macro_stmt_list -> comment .)
    SYMMETRY        reduce using rule 17 (macro_stmt_list -> comment .)
    SITE            reduce using rule 17 (macro_stmt_list -> comment .)
    PIN             reduce using rule 17 (macro_stmt_list -> comment .)
    OBS             reduce using rule 17 (macro_stmt_list -> comment .)
    PROPERTY        reduce using rule 17 (macro_stmt_list -> comment .)


state 23

    (18) macro_stmt -> class .
